--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.80.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -63,6 +64,7 @@
     "zod": "^3.25.50"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.80.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
