--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
+NEXT_PUBLIC_DEV_MODE=true
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
