--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next-i18next": "^15.4.2",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.11.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
