--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.6",
     "puppeteer": "^24.11.1",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.57.0",
