publish btn va man hinh hoat dong

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.512.0",
@@ -53,6 +54,7 @@
     "next-i18next": "^15.4.2",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "puppeteer": "^24.11.1",
     "react": "^18",
     "react-countup": "^6.5.3",
